--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: url("./assets/background.jpg"), #f00 !important;
+  background-size: cover;
+  color: white;
 }
 
+
+.border-2{
+  border-radius: 10px 10px 10px 10px;
+  width: 30vw;
+  margin: 0 auto;
+  padding-top: .5vh;
+  padding-bottom: 1vh;
+}
+
+.border-3 {
+  border: 10px solid #4561b1;
+  width: 20vw;
+  margin: 0 auto;
+  border-radius: 10px 10px 10px 10px;
+}
+
+.searchBtn {
+  width: 6vw;
+  margin: 0 auto;
+
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
