--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,97 @@ body {
 
 }
 
-.gallery-card{
-  background-color: white !important;
+.back-btn{
+  width: 8vw;
+  margin-top: 5vh;
+  margin-left: 14.5vw;
+  margin-bottom: 1vh;
+}
+
+.arrow-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2rem;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+}
+
+.arrow-left {
+  left: 3vw !important;
+}
+
+.arrow-right {
+  right: 3vw !important;
+}
+
+.gallery-card {
+  background-color: white !important; 
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  width: 70vw !important;
+  margin: 8vh;
+  margin-top: .1vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.gallery-card img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  margin-bottom: 15px;
+  
+}
+
+.gallery-card h2 {
+  font-size: 1.8rem;
+  text-align: center;
+  margin-bottom: 5vh;
+}
+
+.gallery-card .date {
+  font-size: 1rem;
+  color: gray;
+  margin-bottom: 20px;
+}
+
+.gallery-card .info {
+  width: 50%;
+  max-height: 80vh;
+  overflow-y: auto;
+  padding: 10px;
+  text-align: center;
+  color: black;
+}
+.gallery-card .description {
+  width: 50%;
+  max-height: 80vh;
+  overflow-y: auto;
+  padding: 10px;
+  text-align: justify;
+}
+
+.gallery-card .description::-webkit-scrollbar {
+  width: 8px;
+}
+
+.gallery-card .description::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 5px;
+}
+
+.gallery-card .description::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+.date{
+  color: black !important;
 }
